# alt-sendme

./: .dockerignore  .gitignore  AGENTS.md  AGENTS.zh-CN.md  CLEANUP_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  DESKTOP_README.md  Dockerfile  FIX_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  PERFORMANCE_ISSUE_REPORT.md  PRIVACY.md  README.md  RELEASE.md  TESTING.md  biome.json  components.json  devenv.nix  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  tsconfig.lib-test.json  tsconfig.node.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md  report-bug.md
.github/workflows/: lint.yml  publish-winget.yml  publish.yml  test.yml
deploy/relay/: Dockerfile  README.md  docker-compose.yml  fly.dev.toml  fly.toml  iroh-relay.conf.example
docs/: fdroid-metadata-example.yml
engine/: Cargo.toml
engine/src/core/: receive.rs  types.rs
engine/tests/: test_cleanup.rs
mobile-app/: README.md  pubspec.yaml
mobile-app/android/app/: build.gradle.kts
mobile-app/lib/: main.dart
mobile-app/lib/src/native/: sendme_ffi.dart
mobile-app/lib/src/screens/: home_screen.dart  receive_tab.dart  send_tab.dart
mobile-app/lib/src/sendme/: client.dart  client_impl.dart  client_native.dart  client_web.dart  instance.dart  types.dart
mobile-app/lib/src/util/: open_url.dart  open_url_impl.dart  open_url_io.dart  open_url_web.dart
mobile-app/test/: widget_test.dart
mobile-app/web/: index.html  manifest.json
scripts/: android-release-build.js  apply-android-release-gradle-patches.js  build-android-ffi.sh  patch-android-release-gradle.js  patch-linux-deb.js  pre-commit-hook  release.js  run-lib-tests.js  sync-version.js  tauri-build-linux.js  validate-version.js
scripts/patches/: 01-fdroid-gradle.patch  02-signing-gradle.patch  android-app-build.gradle.kts.vanilla
sendme/: Cargo.toml
sendme/src/: lib.rs  main_reference.rs
sendme/src/core/: receive.rs  send.rs  types.rs
sendme/tests/: test_cleanup.rs  test_conflicts.rs  test_directory.rs  test_events.rs  test_large_file.rs  test_metadata.rs  test_multi_item.rs  test_single_file.rs
sendme/tests/common/: mod.rs
src/: ffi.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  build.rs  latest.json.template  package.json  tauri.android.conf.json  tauri.conf.json
src-tauri/WiX/: context-menu.wxs
src-tauri/capabilities/: android.json  default.json  sendme.json
src-tauri/fastlane/metadata/android/en-US/: full_description.txt
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-native-utils/: build.rs  package.json  rollup.config.js
src-tauri/plugins/tauri-plugin-native-utils/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-native-utils/android/src/main/java/: CopyUtils.kt  FileUtils.kt  NativeUtils.kt  Utils.kt
src-tauri/plugins/tauri-plugin-native-utils/android/src/main/java/com/altsendme/plugin/native_utils/: CopyUtils.kt  NativeUtils.kt
src-tauri/plugins/tauri-plugin-native-utils/guest-js/: index.ts
src-tauri/plugins/tauri-plugin-native-utils/permissions/: default.toml
src-tauri/plugins/tauri-plugin-native-utils/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-native-utils/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: commands.rs  lib.rs  main.backup.final.rs  main.rs  state.rs  tray.rs  version.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/deep_link/: deep_link.rs  mod.rs
src-tauri/src/features/thumbnail/: image.rs  mime.rs  mod.rs  video.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/video_thumbnail/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/platform/windows/: context_menu.rs
src/core/: .gitignore  mod.rs  receive.rs  send.rs  types.rs
web-app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web-app/src/: App.tsx  global.d.ts  index.css  main.tsx  vite-env.d.ts
web-app/src/components/: AppAlertDialog.tsx  AppFooter.tsx  AppThemeProvider.tsx  AppVersionPayload.tsx  CustomTitleBar.tsx  DragDrop.tsx  LanguageSwitcher.tsx  Receiver.tsx  RelayStatusButton.tsx  Sender.tsx  ThemeSwitcher.tsx  TitleBar.tsx  UpdateToast.tsx  icons.tsx
web-app/src/components/app-version/: AppVersionInline.tsx  AppVersionPayload.tsx  index.ts
web-app/src/components/common/: AppUpdater.tsx  DeepLinkHandler.tsx  FileCopyProgressDialog.tsx  PulseAnimation.tsx  StatusIndicator.tsx  TransferProgressBar.tsx  TransferSuccessScreen.tsx  UploadBox.tsx
web-app/src/components/illustration/: default-file.tsx  doc-file.tsx  image-file.tsx  index.tsx  json-file.tsx  pdf-file.tsx  ppt-file.tsx  txt-file.tsx  xlsx-file.tsx  zip-file.tsx
web-app/src/hooks/: use-dark-mode.ts  use-updater.ts  useDragDrop.ts  useReceiver.ts  useSender.ts
web-app/src/i18n/: TranslationContext.tsx  context.ts  hooks.ts  index.ts  react-i18next-compat.ts  setup.ts
web-app/src/lib/: analytics-decision.test.ts  analytics-decision.ts  analytics-transport.test.ts  analytics-transport.ts  analytics.ts  fileIcons.tsx  initAnalytics.ts  openExternalUrl.ts  platform.ts  platformStyles.ts  relay-auth-token.ts  relay-config.test.ts  relay-config.ts  relay-status.test.ts  relay-status.ts  relay-url-validation.test.ts  relay-url-validation.ts  relay.ts  setting-store.ts  systemNotification.ts  tauri.ts  utils.ts  version.ts
web-app/src/plugins/: nativeUtils.ts
web-app/src/routes/: index.tsx  notfound.tsx  receive.tsx  routes.tsx  settings.general.tsx  settings.network.tsx  settings.tsx
web-app/src/store/: app-setting.ts  sender-store.ts  theme-store.ts
web-app/src/types/: app.ts  nav-item.ts  receiver.ts  sender.ts  transfer.ts  ui.ts
web-app/src/utils/: etaUtils.ts
web-server/: Cargo.toml  Dockerfile  README.md
web-server/src/: main.rs
web-server/static/: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  version.json
web-server/static/assets/: NOTICES
(+85 files in other folders)
