[package]
name = "alt-sendme"
version = "0.1.0"
edition = "2025"
authors = ["Tony Antony <tnyantny@protonmail.com>"]
keywords = ["file-sharing", "network", "p2p", "holepunching", "tauri", "react"]
categories = ["network-programming"]
license = "AGPL-3.0"
repository = "https://github.com/tonyantony300/better-sendme"
description = "A Tauri desktop application for sending files and directories over the network with NAT hole punching"
readme = "README.md"
rust-version = "1.81"

[lib]
name = "sendme"
crate-type = ["lib", "staticlib"]

[dependencies]
anyhow = "1.0.75"
iroh-blobs = { version = "0.95" }
iroh = "0.93"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.4.0"
data-encoding = "2.6.0"
n0-future = "0.1.2"
dirs = "6.0.0"
irpc = "0.9.0"

[profile.release]
panic = "abort"
opt-level = "s"
codegen-units = 1
lto = true
debug = "none"
strip = true
